--- a/src/plugins/i18n/locales/ru.json
+++ b/src/plugins/i18n/locales/ru.json
@@ -236,6 +236,42 @@
   "are you really going to delete this user": "Ты действительно собираешься удалить этого пользователя?",
   "are_you_really_terminate_session": "Ты действительно завершаешь сеанс?",
   "Notifications": "Уведомления",
-  "last_visit": "Последнее посещение"
+  "last_visit": "Последнее посещение",
+  "category": "Категория",
+  "sms_template": "СМС шаблон",
+  "News template": "Шаблон новости",
+  "Locations": "Локации",
+  "Link": "Линк",
+  "phones": "Телефоны",
+  "dashboard": "Панель приборов",
+  "product": "Продукт",
+  "View": "Вид",
+  "All": "Все",
+  "Administration": "Администрация",
+  "backups": "Резервные копии",
+  "date_from": "С",
+  "date_to": "По",
+  "create_a_backup": "Создать резервную копию",
+  "no_available_data": "Нет доступных данных",
+  "are_you_sure_you_want_to_back_up_the_database": "Вы уверены, что хотите сделать резервную копию базы данных?",
+  "journaling": "Ведение дневника",
+  "download_excel": "скачать Excel",
+  "authorization_log": "Журнал авторизации",
+  "activity_log": "Журнал активности",
+  "backup&archiving": "резервное копирование и архивирование",
+  "system": "Система",
+  "cpu_usage": "Использование процессора",
+  "ram_usage": "Использование оперативной памяти",
+  "disk_usage": "Использование диска",
+  "info_about_system": "Информация о системе",
+  "processor": "Процессор",
+  "database": "База данных",
+  "disk2": "Диск",
+  "date_and_time": "Дата и время",
+  "View order": "Посмотреть заказ",
+  "version_number": "Номер версии",
+  "version_control": "Контроль версий"
+
+
 
 }
