--- a/src/plugins/i18n/locales/uz.json
+++ b/src/plugins/i18n/locales/uz.json
@@ -7,7 +7,7 @@
     "Homepage": "Bosh sahifa",
     "Staffs": "Xodimlar",
     "Students": "O`quvchilar",
-    "Directory": "Ma'lumotlar",
+    "directory": "Ma'lumotlar",
     "Tariffs": "Tariflar",
     "About Us": "Biz haqimizda",
     "Finance": "Moliya",
@@ -201,9 +201,44 @@
   "Notifications": "Bildirishnomalar",
   "username": "Foydalanuvchi nomi",
   "last_visit": "Oxirgi tashrif",
-  "users": "Foydalanuvchilar"
+  "category": "Kategoriya",
+  "sms_template": "SMS shablon",
+  "News template": "Yangiliklar shabloni",
+  "Locations": "Joylar",
+  "Edit": "Tahrirlash",
+  "Link": "Havola",
+  "phones": "Telefonlar",
+  "region": "ٌRegion",
+  "address": "Manzil",
+  "dashboard": "Boshqaruv paneli",
+  "product": "Mahsulot",
+  "View": "Ko'rinish",
+  "All": "Hammasi",
+  "Administration": "Ma'muriyat",
+  "backups": "Zaxira nusxalari",
+  "date_from": "Sanadan",
+  "date_to": "Sanagacha",
+  "create_a_backup": "Zaxira nusxasini yaratish",
+  "no_available_data": "Mavjud ma'lumotlar yo'q",
+  "are_you_sure_you_want_to_back_up_the_database": "Ma'lumotlar bazasini zaxiralashni xohlayotganingizga ishonchingiz komilmi?",
+  "journaling": "Jurnal yuritish",
+  "download_excel": "Excelni yuklab oling",
+  "authorization_log": "Avtorizatsiya jurnali",
+  "activity_log": "Faoliyat jurnali",
+  "backup&archiving": "Zaxiralash va arxivlash",
+  "system": "Sistema",
+  "cpu_usage": "CPU foydalanish",
+  "ram_usage": "Ram foydalanish",
+  "disk_usage": "Diskdan foydalanish",
+  "info_about_system": "Tizim haqida ma'lumot",
+  "processor": "Protsessor",
+  "database": "Ma'lumotlar bazasi",
+  "disk2": "Disk",
+  "date_and_time": "Sana va vaqt",
+  "View order": "Buyurtmani ko'rish",
+  "version_number": "Versiya raqami",
+  "version_control": "Versiya nazorati"
 
-  
 
 
 }
