--- a/src/plugins/i18n/locales/ru.json
+++ b/src/plugins/i18n/locales/ru.json
@@ -270,8 +270,6 @@
   "date_and_time": "Дата и время",
   "View order": "Посмотреть заказ",
   "version_number": "Номер версии",
-  "version_control": "Контроль версий"
-
-
-
+  "version_control": "Контроль версий",
+  "Modified date": "Дата изменения"
 }
