--- a/src/plugins/i18n/locales/uz.json
+++ b/src/plugins/i18n/locales/uz.json
@@ -237,7 +237,8 @@
   "date_and_time": "Sana va vaqt",
   "View order": "Buyurtmani ko'rish",
   "version_number": "Versiya raqami",
-  "version_control": "Versiya nazorati"
+  "version_control": "Versiya nazorati",
+  "Modified date": "O'zgartirilgan sana"
 
 
 
