--- a/src/plugins/i18n/locales/ru.json
+++ b/src/plugins/i18n/locales/ru.json
@@ -207,7 +207,7 @@
   "correct_answers_found": "Найдены правильные ответы",
   "the_date_of_the_test": "Дата теста",
   "info": "Информация",
-  "ip_address": "ИП Адрес",
+  "ip_address": "IP Адрес",
   "device_version": "Аппаратная версия",
   "device_model": "Модель оборудования",
   "number_of_days_left": "Количество оставшихся дней",
@@ -258,7 +258,7 @@
   "download_excel": "скачать Excel",
   "authorization_log": "Журнал авторизации",
   "activity_log": "Журнал активности",
-  "backup&archiving": "резервное копирование и архивирование",
+  "backup&archiving": "Резервное копирование и архивирование",
   "system": "Система",
   "cpu_usage": "Использование процессора",
   "ram_usage": "Использование оперативной памяти",
@@ -266,7 +266,6 @@
   "info_about_system": "Информация о системе",
   "processor": "Процессор",
   "database": "База данных",
-  "disk2": "Диск",
   "date_and_time": "Дата и время",
   "View order": "Посмотреть заказ",
   "version_number": "Номер версии",
@@ -275,9 +274,19 @@
   "ram": "Оперативной памяти",
   "disk": "Диск",
   "company": "Компания",
-  "tech": "Технология",
+  "tech": "Технологии",
   "products": "Продукты",
   "website": "Веб-сайт",
-  "licence": "Лицензия"
+  "licence": "Лицензия",
+  "available": "Доступно",
+  "used": "Использовано",
+  "systems": "Системы",
+  "frontend": "Фронтэнд",
+  "backend": "Бекенд",
+  "ci_cd": "CI/CD",
+  "users_amount": "Количество пользователей",
+  "system_modules": "Модули системы",
+  "district": "Округ",
+  "mac_address": "MAC-адрес"
 
 }
