--- a/src/plugins/i18n/locales/ru.json
+++ b/src/plugins/i18n/locales/ru.json
@@ -289,6 +289,8 @@
   "district": "Округ",
   "mac_address": "MAC-адрес",
   "Do you really want to unlink this card?": "Вы действительно хотите отвязать данную карту?",
-  "Unlinking the card": "Отвязка карты"
+  "Unlinking the card": "Отвязка карты",
+  "created_successfully": "Создано успешно",
+  "user_details": "Данные пользователя"
 
 }
