--- a/src/plugins/i18n/locales/uz.json
+++ b/src/plugins/i18n/locales/uz.json
@@ -261,6 +261,8 @@
   "created_successfully": "Muvaffaqiyatli yaratildi",
   "user_details": "Foydalanuvchi tafsilotlari",
   "Number (multi-digit-code)": "Raqam (ko'p xonali kod)",
-  "updated_successfully": "Muvaffaqiyatli yangilandi"
+  "updated_successfully": "Muvaffaqiyatli yangilandi",
+  "deleted_successfully": "Muvaffaqiyatli oʻchirildi",
+  "PrivacyPolicy": "Maxfiylik siyosati"
 
 }
