--- a/src/plugins/i18n/locales/uz.json
+++ b/src/plugins/i18n/locales/uz.json
@@ -263,6 +263,7 @@
   "Number (multi-digit-code)": "Raqam (ko'p xonali kod)",
   "updated_successfully": "Muvaffaqiyatli yangilandi",
   "deleted_successfully": "Muvaffaqiyatli oʻchirildi",
-  "PrivacyPolicy": "Maxfiylik siyosati"
+  "PrivacyPolicy": "Maxfiylik siyosati",
+  "Terms_and_conditions": "Foydalanish shartlari"
 
 }
