--- a/src/plugins/i18n/locales/en.json
+++ b/src/plugins/i18n/locales/en.json
@@ -2,6 +2,10 @@
   "validation": {
     "this_field_is_required": "This field is required"
   },
+  "pagination": {
+    "show_from": "Show from 1 to",
+    "column": "lines"
+  },
   "nav": {
     "advertising": "Advertising",
     "posts": "Posts",
