--- a/src/plugins/i18n/locales/ru.json
+++ b/src/plugins/i18n/locales/ru.json
@@ -55,6 +55,7 @@
     "question": "Вопрос",
     "audio": "Аудио"
   },
+  "Promotions": "Акции",
   "deactivate": "Деактивировать",
   "are_you_really_going_to_delete_this_user": "Вы уверены?",
   "deleted_successfully": "Удален успешно",
