--- a/src/plugins/i18n/locales/uz.json
+++ b/src/plugins/i18n/locales/uz.json
@@ -52,6 +52,7 @@
     "question": "Savol",
     "audio": "Audio"
   },
+  "Promotions": "Aktsiyalar",
   "success": "Muvaffaqiyatli",
   "error": "Xatolik",
   "Search": "Qidirish",
