new changes and refactoring devleloper code

--- a/src/plugins/i18n/locales/uz.json
+++ b/src/plugins/i18n/locales/uz.json
@@ -52,7 +52,7 @@
     "question": "Savol",
     "audio": "Audio"
   },
-  "Promotions": "Aktsiyalar",
+  "Promotions": "Aksiyalar",
   "success": "Muvaffaqiyatli",
   "error": "Xatolik",
   "Search": "Qidirish",
@@ -92,6 +92,17 @@
   "image": "Rasm",
   "title": "Sarlavha",
   "description": "Tavsif",
+  "Detail photo": "Tafsilotli fotosurat",
+  "Background photo": "Fon rasmi",
+  "active product count": "Faol mahsulotlar soni",
+  "inactive product count": "Faol bo'lmagan mahsulotlar soni",
+  "has discount": "Chegirma bor",
+  "discount percentage": "Chegirma foizi",
+  "product detail": "Mahsulot haqida ma'lumot",
+  "from_to": "Sana",
+  "Discount": "Chegirma",
+  "Discount available": "Chegirma mavjud",
+  "No discount available": "Chegirma mavjud emas",
   "tariff": "Tarif",
   "Course thumbnail": "Kurs rasmi",
   "lesson_thumbnail": "Lesson rasmi",
@@ -241,11 +252,12 @@
   "info_about_system": "Tizim haqida ma'lumot",
   "processor": "Protsessor",
   "database": "Ma'lumotlar bazasi",
-  "date_and_time": "Sana va vaqt",
+  "date_and_time": "Yaratilgan sana",
   "View order": "Buyurtmani ko'rish",
   "version_number": "Versiya raqami",
   "version_control": "Versiya nazorati",
   "Modified date": "O'zgartirilgan sana",
+  "End date": "Tugash sanasi",
   "ram": "Tasodifiy kirish xotirasi",
   "disk": "Disk",
   "company": "Kompaniya",
