--- a/src/plugins/i18n/locales/uz.json
+++ b/src/plugins/i18n/locales/uz.json
@@ -268,7 +268,6 @@
   "user_details": "Foydalanuvchi tafsilotlari",
   "Number (multi-digit-code)": "Raqam (ko'p xonali kod)",
   "updated_successfully": "Muvaffaqiyatli yangilandi",
-  "deleted_successfully": "Muvaffaqiyatli oʻchirildi",
   "PrivacyPolicy": "Maxfiylik siyosati",
   "Terms_and_conditions": "Foydalanish shartlari",
   "staff_details": "Xodimlar tafsilotlari",
@@ -280,6 +279,7 @@
   "edit banner": "Bannerni tahrirlash",
   "add banner": "Banner qo'shish",
   "contacts": "Kontaktlar",
-  "The phone number must be entered in the format: '998 [XX] [XXX XX XX]": "Telefon raqami formatda kiritilishi kerak: '998 [XX] [XXX XX XX]"
+  "The phone number must be entered in the format: '998 [XX] [XXX XX XX]": "Telefon raqami formatda kiritilishi kerak: '998 [XX] [XXX XX XX]",
+  "Posts": "Maqolalar"
 
 }
