--- a/src/plugins/i18n/locales/ru.json
+++ b/src/plugins/i18n/locales/ru.json
@@ -311,6 +311,7 @@
   "edit banner": "Редактировать баннер",
   "add banner": "Добавить баннер",
   "contacts": "Контакты",
-  "The phone number must be entered in the format: '998 [XX] [XXX XX XX]": "Номер телефона необходимо вводить в формате: '998 [XX] [XXX XX XX]"
+  "The phone number must be entered in the format: '998 [XX] [XXX XX XX]": "Номер телефона необходимо вводить в формате: '998 [XX] [XXX XX XX]",
+  "phone_numbers": "Телефонные номера"
   
 }
