--- a/src/plugins/i18n/locales/uz.json
+++ b/src/plugins/i18n/locales/uz.json
@@ -280,6 +280,6 @@
   "add banner": "Banner qo'shish",
   "contacts": "Kontaktlar",
   "The phone number must be entered in the format: '998 [XX] [XXX XX XX]": "Telefon raqami formatda kiritilishi kerak: '998 [XX] [XXX XX XX]",
-  "Posts": "Maqolalar"
+  "phone_numbers": "Telefon raqamlari"
 
 }
