--- a/src/plugins/i18n/locales/ru.json
+++ b/src/plugins/i18n/locales/ru.json
@@ -133,6 +133,8 @@
   "title": "Заголовок",
   "description": "Описание",
   "tariff": "Тариф",
+  "Quantity": "Количество",
+  "Measurement_type": "Тип измерения",
   "Course thumbnail": "Изображение курса",
   "course_name": "Название курса",
   "lesson_name": "Название урока",
@@ -240,7 +242,10 @@
   "end_date": "Конец рассылки:",
   "template": "Шаблон:",
   "photo": "Фото",
+  "UZ": "Ўз",
+  "RU": "Ру",
   "url": "URL",
+  "Published": "Опубликовано",
   "planned for(publish date)": "Запланированная дата",
   "go_to_page": "Перейти на страницу",
   "forward": "Вперед",
