--- a/src/plugins/i18n/locales/uz.json
+++ b/src/plugins/i18n/locales/uz.json
@@ -104,6 +104,8 @@
   "Discount available": "Chegirma mavjud",
   "No discount available": "Chegirma mavjud emas",
   "tariff": "Tarif",
+  "Quantity": "Miqdori",
+  "Measurement_type": "O'lchov turi",
   "Course thumbnail": "Kurs rasmi",
   "lesson_thumbnail": "Lesson rasmi",
   "course_name": "Kurs nomi",
@@ -200,8 +202,11 @@
   "start_date": "Boshlanish sanasi:",
   "end_date": "Tugash sanasi:",
   "template": "Shablon:",
-  "photo": "Foto",
+  "photo": "Rasm",
   "url": "URL",
+  "UZ": "Uz",
+  "RU": "Ru",
+  "Published": "Chop etilgan",
   "planned for(publish date)": "Rejalangan sana",
   "go_to_page": "Sahifaga o'ting",
   "forward": "Oldinga",
