--- a/src/plugins/i18n/locales/ru.json
+++ b/src/plugins/i18n/locales/ru.json
@@ -317,7 +317,7 @@
   "created_successfully": "Создано успешно",
   "user_details": "Данные пользователя",
   "Number (multi-digit-code)": "Номер (многозначный код)",
-  "updated_successfully": "Успешно Обновлено",
+  "updated_successfully": "Успешно oбновлено",
   "PrivacyPolicy": "Политика конфиденциальности",
   "Terms_and_conditions": "Условия и положения",
   "staff_details": "Информация о персонале",
